--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page | Owl Facts</title>
+    <title>Home Page | Learn About Barred Owls </title>
 </head>
 <body>
-    <h2>Owl Facts</h2>
+    <h2>Learn About Barred Owls </h2>
     <img src="https://www.sdakotabirds.com/species_photos/owls/barred_owl_13.jpg" alt="A barred owl on a tree branch">
 </body>
 </html>
